cmake_minimum_required(VERSION 2.8.3)
project(map_planner)

add_compile_options(-std=c++11)


## System dependencies are found with CMake's conventions
find_package(Boost REQUIRED COMPONENTS filesystem)

###########
## Build ##
###########

include_directories(
  include
  ${catkin_INCLUDE_DIRS}
)

add_library(${PROJECT_NAME}
   src/map_planner.cpp
)

add_executable(map_planner_node src/map_planner_node.cpp)

target_link_libraries(map_planner_node
   ${PROJECT_NAME}
)