<?xml version="1.0"?>
<package format="2">
  <name>map_planner</name>
  <version>0.0.1</version>
  <description>The map_planner package</description>

  <maintainer email="praveen.ramanujam@rapyuta-robotics.com">Praveen Ramanujam</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <export>
  </export>

</package>
